--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "php": "^5.6 || ^7.0",
         "zendframework/zend-component-installer": "^1.0 || ^2.1",
         "zendframework/zend-mvc": "^3.1.1",
+        "doctrine/orm": "^2.1.3",
         "zfcampus/zf-development-mode": "^3.2"
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "Vehicle\\": "module/Vehicle/src/"
         }
     },
     "autoload-dev": {
