Insert Google Map to simulate real time tracking. Adjust CRUD and some functions.

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "autoload-dev": {
         "psr-4": {
             "ApplicationTest\\": "module/Application/test/",
-            "VehicleTest\\": "module/Vehicle/test/"
+            "VehicleTest\\": "module/Vehicle/test/",
+            "MotoristTest\\": "module/Motorist/test/"
         }
     },
     "scripts": {
